@@ -3,6 +3,7 @@ package me.coderfrish.nbt.type;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.stream.Stream;
 
 public class NBTList implements Iterable<NBTPrimitive> {
@@ -22,11 +23,19 @@ public class NBTList implements Iterable<NBTPrimitive> {
     }
 
     public NBTPrimitive getLast() {
-        return this.list.getLast();
+        if (this.isEmpty()) {
+            throw new NoSuchElementException();
+        } else {
+            return this.get(this.size() - 1);
+        }
     }
 
     public NBTPrimitive getFirst() {
-        return this.list.getFirst();
+        if (this.isEmpty()) {
+            throw new NoSuchElementException();
+        } else {
+            return this.get(0);
+        }
     }
 
     public boolean isEmpty() {
